@@ -18,6 +18,9 @@
 	* lisp/sawfish/gtk/Makefile.in
 	* lisp/sawfish/wm/ext/play-audio.jl: updated
 
+	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: re-import commit
+	b961a052fcedd2545117082b7d3236a84acd49ad (this time it works)
+
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum librep to 0.92.1, new funcs required by
 	SawfishConfig
